--- a/package.json
+++ b/package.json
@@ -62,5 +62,9 @@
       "electron",
       "esbuild"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jagaimotomato/service-hub.git"
   }
 }
