Add app icons and build config for all platforms
Added platform-specific icons (.icns, .ico, .png) and logo.svg to the resources directory. Updated package.json with build configuration for Windows, macOS, and Linux, specifying targets and icon paths for each platform to support cross-platform packaging.

--- a/package.json
+++ b/package.json
@@ -66,5 +66,27 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/jagaimotomato/service-hub.git"
+  },
+  "build": {
+    "appId": "com.yourname.servicehub",
+    "productName": "ServiceHub",
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "resources/icon.ico"
+    },
+    "mac": {
+      "target": [
+        "dmg"
+      ],
+      "icon": "resources/icon.icns"
+    },
+    "linux": {
+      "target": [
+        "AppImage"
+      ],
+      "icon": "resources/icon.png"
+    }
   }
 }
