--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "electron-store": "6.0.1",
     "electron-updater": "^6.3.9",
+    "fix-path": "^5.0.0",
     "lucide-react": "^0.554.0",
     "tailwind-merge": "^3.4.0",
     "tree-kill": "^1.2.2",
