--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "service-hub",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -28,11 +28,13 @@
     "electron-updater": "^6.3.9",
     "fix-path": "^5.0.0",
     "lucide-react": "^0.554.0",
+    "node-pty": "^1.0.0",
     "tailwind-merge": "^3.4.0",
     "tree-kill": "^1.2.2",
     "uuid": "^13.0.0",
     "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
+    "xterm-addon-fit": "^0.8.0",
+    "xterm-addon-web-links": "^0.9.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
