--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "service-hub",
   "version": "1.0.2",
-  "description": "An Electron application with React and TypeScript",
+  "description": "Your local service manager",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "jagaimotomato",
+  "homepage": "https://github.com/jagaimotomato/service-hub",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
@@ -73,6 +73,15 @@
   "build": {
     "appId": "com.yourname.servicehub",
     "productName": "ServiceHub",
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "perMachine": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "ServiceHub",
+      "deleteAppDataOnUninstall": true
+    },
     "win": {
       "target": [
         {
